[package]
name = "minigrep"
version = "0.1.0"
authors = ["Jodhandeep Singh <49287012+jdsingh122918@users.noreply.github.com>"]
edition = "2018"
description = "Implementation of grep with rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# opt-level describe the how much we want to optimize the code.
# More the level, better the optimization and longer the compile time.
[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
